<resources>
    <string name="app_name">AcademiaApp</string>
    <string name="home">Ínicio</string>
    <string name="alunos">Alunos</string>
    <string name="menu">Menu</string>
    <string name="sexo_masculino">Masculino</string>
    <string name="sexo_feminino">Feminino</string>
    <string name="sexo_outro">Outro</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="adicionar">Adicionar</string>
    <string name="plano">Plano</string>
    <string name="atualizar">Atualizar</string>
    <string name="aluno">Aluno</string>
    <string name="modalidade">Modalidade</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="gadruacao">Graduação</string>
    <string name="valor">R$</string>
    <string name="dia_vencimento">Dia venc.</string>
    <string name="graduacao_modalidade">Graduações desta modalidade</string>
    <string name="graduacao">Graduação</string>
    <string name="modalidades">Modalidades</string>
    <string name="matricula_modalidade">Modalidades da matrícula</string>
    <string name="matriculas">Matrículas</string>
    <string name="nova_matricula">Nova matrícula</string>
    <string name="selecione_aluno">Selecione o aluno</string>
    <string name="planos">Planos</string>
    <string name="vazio_planos">Sem planos cadastrados</string>
    <string name="vazio_modalidades">Sem modalidades cadastradas</string>
    <string name="vazio_matriculas">Sem matrículas cadastradas</string>
    <string name="vazio_alunos">Sem alunos cadastrados</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="telefone">Telefone (Opcional)</string>
    <string name="celular">Celular</string>
    <string name="observacao">Observações</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Nº</string>
    <string name="complemento">Complemento (Opcional)</string>
    <string name="bairro">Bairro</string>
    <string name="estado">Estado</string>
    <string name="pais">País</string>
    <string name="cep">CEP</string>
    <string name="pesquisa">Pesquisar</string>
    <string name="cidade">Cidade</string>
    <string name="sexo">Sexo</string>
    <string name="adicionar_aluno">Adicionar aluno</string>
    <string name="dados_adicionais">Dados adicionais (Opcional)</string>
    <string name="excluir">Excluir</string>
    <string name="nova_modalidade">Nova modalidade</string>
    <string name="gerar_fatura">Gerar fatura</string>
    <string name="fatura_gerada">Fatura gerada</string>
    <string name="data">Data</string>
    <string name="total">Total</string>
    <string name="faturas_geradas">Faturas geradas</string>
    <string name="vazio_faturas">Sem faturas registradas</string>
    <string name="novo_plano">Novo Plano</string>
    <string name="selecione_cidade">Selecione a cidade</string>
    <string name="matricula_numero">Matrícula %d</string>
    <string name="academia">AcademiaApp</string>
    <string name="entrar">ENTRAR</string>
    <string name="senha">Senha</string>
    <string name="logado">Usuário logado: %d</string>
    <string name="sair">Sair</string>
    <string name="sem_alunos">Nenhum aluno cadastrado</string>
    <string name="adicionar_matricula">Adicionar matrícula</string>
    <string name="add_aluno">Adicionar aluno</string>
    <string name="faturas">Faturas</string>
    <string name="add_plano">Adicionar plano</string>
    <string name="add_modalidade">Adicionar modalidade</string>
    <string name="criar_conta">Criar conta</string>
    <string name="sincrozinar_nuvem">Sincronizar dados com a nuvem</string>
    <string name="sincronizar">Sincronizar</string>

</resources>
