<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/etNome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#FFFFFF"
                    android:hint="@string/nome"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:inputType="text|textCapWords"
                    android:padding="12dp"
                    android:textColor="@color/primaryText"
                    android:textColorHint="@color/secondaryText"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardExcluir"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp">

                <Button
                    android:id="@+id/btExcluir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="15dp"
                    android:text="@string/excluir"
                    android:textColor="@color/red"
                    android:textColorHint="#FFFFFF"
                    android:textSize="12sp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/btDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/data_nascimento"
                android:drawableEnd="@drawable/ic_baseline_date_range_24"
                android:padding="12dp"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/etCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/celular"
                android:imeOptions="actionNext"
                android:inputType="number|textCapSentences"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/etTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/telefone"
                android:imeOptions="actionNext"
                android:inputType="number|textCapSentences"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_toStartOf="@+id/rgSexo"
                android:text="@string/sexo"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:padding="10dp"
                    android:text="@string/masculino"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbFeminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:padding="10dp"
                    android:text="@string/feminino"
                    android:textColor="@color/white" />
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_bottom"
            android:padding="10dp"
            android:text="@string/endereco"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/btCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="12dp"
                android:text="@string/cidade"
                android:textAlignment="textStart"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:textAllCaps="false"
                android:textColor="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/etEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/endereco"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_toStartOf="@+id/cardNumero">

                <EditText
                    android:id="@+id/etBairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/bairro"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapWords"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@color/primaryText"
                    android:textColorHint="@color/secondaryText"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardNumero"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/etNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/numero"
                    android:imeOptions="actionNext"
                    android:inputType="number|textCapSentences"
                    android:digits="0123456789"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@color/primaryText"
                    android:textColorHint="@color/secondaryText"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/etCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/cep"
                android:imeOptions="actionNext"
                android:inputType="number|textCapSentences"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/etComplemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/complemento"
                android:inputType="text|textCapSentences"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_bottom"
            android:padding="10dp"
            android:text="@string/dados_adicionais"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/etObservacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="@string/observacao"
                android:inputType="text|textCapSentences"
                android:imeOptions="actionDone"
                android:padding="12dp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp">

            <Button
                android:id="@+id/btCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="15dp"
                android:text="@string/cadastrar"
                android:textColor="@color/secondaryText"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>

