<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:hint="@string/nome"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/btData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:drawableEnd="@drawable/ic_baseline_date_range_24"
                android:padding="12dp"
                android:text="@string/data"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/secondaryText"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp">

            <Button
                android:id="@+id/btGerarFatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="15dp"
                android:text="@string/gerar_fatura"
                android:textColor="@color/secondaryText"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/boxFaturaGerada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="15dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_bottom"
                android:padding="15dp"
                android:text="@string/fatura_gerada"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:textSize="16sp"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>

