<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/academia"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:textSize="48sp"
            android:fontFamily="cursive"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#EE333333"
                app:cardCornerRadius="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:padding="15dp"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="15dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:background="@android:color/transparent"
                    android:textColorHint="#FFFFFF" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#EE333333"
                app:cardCornerRadius="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:padding="15dp"
                    android:drawableStart="@drawable/ic_dialpad"
                    android:drawablePadding="15dp"
                    android:textColor="#FFFFFF"
                    android:inputType="textPassword"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:background="@android:color/transparent"
                    android:textColorHint="#FFFFFF" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="5dp">

                <Button
                    android:id="@+id/btEntrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entrar"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:background="@android:color/transparent"
                    android:textColorHint="#FFFFFF" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>